# coursera

part1/week1/: lesson_02.cpp  lesson_03.cpp  lesson_04.cpp  lesson_05.cpp  lesson_06.cpp  lesson_07.cpp  lesson_08.cpp  lesson_09.cpp
part1/week2/: lesson_01.cpp  lesson_02.cpp  lesson_03.cpp  lesson_04.cpp  lesson_05.cpp  lesson_06.cpp  lesson_07.cpp  lesson_08.cpp  lesson_09.cpp  lesson_10.cpp  lesson_11.cpp  lesson_12.cpp  lesson_13.cpp  lesson_14.cpp  lesson_15.cpp  lesson_16.cpp  lesson_17.cpp  lesson_18.cpp
part1/week3/: lesson_01.cpp  lesson_02.cpp  lesson_03.cpp  lesson_04.cpp  lesson_05.cpp  lesson_06.cpp  lesson_07.cpp  lesson_08.cpp
part1/week4/: lesson_01.cpp  lesson_02.cpp  lesson_03.cpp  lesson_05.cpp  lesson_06.cpp  lesson_07.cpp  lesson_09.cpp  lesson_10.cpp  lesson_11.cpp  lesson_12.cpp
part1/week4/lesson_04/: part_01.cpp  part_02.cpp
part1/week4/lesson_08/: part_01.cpp  part_02.cpp  part_03.cpp  part_04.cpp  part_05.cpp
part1/week5/: lesson_01.cpp
part2/week1/: lesson_01.cpp  lesson_02.cpp  lesson_03.cpp  lesson_04.cpp  lesson_05.cpp  lesson_06.cpp  lesson_07.cpp
part2/week2/: lesson_01.cpp  lesson_02.cpp  lesson_03.cpp  lesson_04.cpp  lesson_05.cpp
part2/week3/: lesson_01.cpp  lesson_02.cpp  lesson_03.cpp
part2/week3/lesson_04/: CMakeLists.txt  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
part2/week4/: lesson_01.cpp  lesson_02.cpp  lesson_03.cpp  lesson_04.cpp  lesson_05.cpp  lesson_06.cpp  lesson_08.cpp  lesson_09.cpp
part2/week4/lesson_07/: part_01.cpp  part_02.cpp
part2/week4/lesson_10/: part_01.cpp  part_02.cpp
part2/week4/lesson_11/: part_01.cpp  part_02.cpp
part2/week5/: lesson_01.cpp  lesson_02.cpp  lesson_03.cpp  lesson_04.cpp
part2/week6/project/: CMakeLists.txt  condition_parser.cpp  condition_parser.h  database.cpp  database.h  date.cpp  date.h  event.cpp  event.h  main.cpp  node.cpp  node.h  token.cpp  token.h
part2/week6/project/tests/: condition_parser_test.cpp  condition_parser_test.h  database_test.cpp  database_test.h  date_test.cpp  date_test.h  event_parser_test.cpp  event_parser_test.h  test_runner.h  tests.cpp
part3/week1/: CMakeLists.txt  airline_ticket.h  lesson_01.cpp  lesson_02.cpp  lesson_03.cpp  lesson_04.cpp  lesson_05.cpp  lesson_06.cpp  lesson_07.cpp  lesson_08.cpp  lesson_09.cpp  test_runner.h
part3/week2/: CMakeLists.txt  lesson_01.cpp  lesson_02.cpp  lesson_04.cpp  student.h
part3/week3/: CMakeLists.txt  lesson_02.cpp  lesson_03.cpp  lesson_04.cpp  simple_vector.h
part3/week4/: CMakeLists.txt  http_request.h  lesson_01.cpp  lesson_02.cpp  lesson_03.cpp  lesson_04.cpp  lesson_05.cpp  lesson_06.cpp  stack_vector.h  stats.cpp  stats.h
part3/week5/: CMakeLists.txt  lesson_01.cpp  lesson_02.cpp  lesson_03.cpp  lesson_04.cpp  lesson_05.cpp  lesson_06.cpp  lesson_07.cpp  lesson_08.cpp  lesson_09.cpp  lesson_10.cpp  lesson_11.cpp  simple_vector.h  simple_vector_2.h
part3/week6/project_part1/: CMakeLists.txt  parse.h  profile.h  search_server.cpp  search_server.h
part3/week6/project_part2/: CMakeLists.txt  main.cpp  paginator.h  parse.cpp  search_server.cpp  search_server.h  synhronized.h
part4/: CMakeLists.txt
part4/week1/: CMakeLists.txt  lesson_02.cpp  lesson_03.cpp  lesson_04.cpp  lesson_05.cpp  lesson_06.cpp
part4/week2/: CMakeLists.txt  ini.cpp  ini.h  json.cpp  json.h  lesson_01.cpp  lesson_02.cpp  lesson_03.cpp  lesson_04.cpp  lesson_07.cpp  xml.cpp  xml.h
part4/week2/lesson_05/: CMakeLists.txt  main.cpp  stats_aggregator.cpp  stats_aggregator.h  stats_aggregator_test.cpp
part4/week2/lesson_06/: CMakeLists.txt  collide.cpp  geo2d.cpp  geo2d.h
part4/week3/: CMakeLists.txt  Common.h  animals.h  lesson_01.cpp  lesson_02.cpp  lesson_03.cpp  lesson_04.cpp  lesson_05.cpp  lesson_06.cpp  lesson_07.cpp  lesson_08.cpp  lesson_09.cpp
part4/week4/: CMakeLists.txt  lesson_03.cpp  test_runner.cpp  test_runner.h
part4/week4/lesson_01/: CMakeLists.txt  Common.h  Solution.cpp  Textures.h  main.cpp
part4/week4/lesson_02/: CMakeLists.txt  Common.h  Solution.cpp  main.cpp
part4/week4/lesson_04/: CMakeLists.txt  booking.h  new_booking_providers.h  old_trip_manager.h
part4/week5/: CMakeLists.txt  lesson_03.cpp  lesson_04.cpp  lesson_05.cpp  lesson_07.cpp  lesson_08.cpp  lesson_09.cpp  lesson_10.cpp  lesson_12.cpp
part4/week5/lesson_01/: CMakeLists.txt  common.h  main.cpp
part4/week5/lesson_06/: CMakeLists.txt  bug1_bad.cpp  bug2_bad.cpp  bug3_bad.cpp  bug4_bad.cpp  bug5_bad.cpp  bug6_bad.cpp  solution.h  tests.cpp
